further enhancements to the sensei_user_courses shortcode to ensure toggle buttons show active and inactive, also wrapping the shortcode for easier css modifications

--- a/assets/css/frontend/sensei.scss
+++ b/assets/css/frontend/sensei.scss
@@ -919,6 +919,17 @@ section.entry span.course-price { padding-left: 10px; }
 }
 
 /**
+* sensei_user_course shortcode styles
+*/
+#sensei-user-courses {
+  #user-course-status-toggle {
+    a.active{
+      color: #D4D4D4;
+    }
+  }
+}
+
+/**
  * Imports
  */
 @import 'grid';
